--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataobra-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "API para dataobra",
   "main": "server.js",
   "scripts": {
@@ -15,6 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
