--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "connect-redis": "^6.1.2",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -20,7 +20,7 @@
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "redis": "^4.0.4"
+    "redis": "^4.0.0-rc.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
