--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "ioredis": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "redis": "^4.0.0-rc.4"
